<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_teams_dark">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/actionButtonsContainer"
        app:layout_constraintTop_toBottomOf="@id/btnBack">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_top_bg"
            android:clipToOutline="true">

            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_bottom_fade" />

            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingBottom="70dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView2"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:elevation="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ball"
                    app:shapeAppearanceOverlay="@style/RoundedImage18" />

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/unbounded"
                    android:lineSpacingExtra="-8dp"
                    android:text="@string/inventory_detail_item_name_placeholder"
                    android:textColor="#FC4F08"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                
                <LinearLayout
                    android:id="@+id/teamInfoRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCityValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/prompt_regular"
                            android:maxLines="1"
                            android:text="-"
                            android:textColor="#FEA613"
                            android:textFontWeight="700"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCityLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:text="@string/inventory_detail_category_label"
                            android:textColor="#CCFFFFFF"
                            android:textSize="18sp" />
                    </LinearLayout>

                    
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvFoundedValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:text="0"
                            android:textColor="#FEA613"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvFoundedLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:text="@string/inventory_detail_quantity_label"
                            android:textColor="#CCFFFFFF"
                            android:textSize="18sp" />
                    </LinearLayout>

                    
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvPlayersValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:text="-"
                            android:textColor="#FEA613"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvPlayersLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:text="@string/inventory_detail_status_label"
                            android:textColor="#CCFFFFFF"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="#2FFFFFFF"
                    android:paddingHorizontal="20dp" />

                <TextView
                    android:id="@+id/tvAboutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/unbounded"
                    android:text="@string/inventory_detail_about_default"
                    android:textAllCaps="true"
                    android:textColor="#FC4F08"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/inventory_detail_no_notes"
                    android:textColor="#A2FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    
    <LinearLayout
        android:id="@id/actionButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@drawable/btn_edit_gradient"
            android:fontFamily="@font/unbounded"
            android:text="Edit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/btn_delete_gradient"
            android:contentDescription="Delete"
            android:scaleType="centerInside"
            android:src="@drawable/trash_icon" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
